--- a/package.json
+++ b/package.json
@@ -64,7 +64,12 @@
     "cookie-parser": "~1.4.3",
     "cookie-session": "1.3.2",
     "ejs": "2.6.1",
-    "eslint": "2.13.1",
+    "eslint": "5.11.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "express-session": "1.15.6",
     "hbs": "4.0.1",
     "istanbul": "0.4.5",
